<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.uhc.presentation.pet.PetRegisterViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:title="@string/label_client_register" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <include
                    layout="@layout/section_layout"
                    app:title="@{@string/label_pet_info}" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyleDefault"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_padding_xtiny"
                    android:hint="@string/label_name">

                    <EditText
                        style="@style/EditTextStyleDefault"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:text="@={viewModel.name}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyleDefault"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/label_doc">

                    <EditText
                        style="@style/EditTextStyleDefault"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:text="@={viewModel.name}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyleDefault"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/label_email">

                    <EditText
                        style="@style/EditTextStyleDefault"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:text="@={viewModel.breed}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyleDefault"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/label_phone_1">

                    <EditText
                        style="@style/EditTextStyleDefault"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:text="@={viewModel.colour}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyleDefault"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:hint="@string/label_phone_2">

                    <EditText
                        style="@style/EditTextStyleDefault"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:text="@={viewModel.size}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyleDefault"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:hint="@string/label_phone_2">

                    <EditText
                        style="@style/EditTextStyleDefault"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:text="@={viewModel.dateOfBirth}" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:enabled="@{!viewModel.isProgress}"
                    android:onClick="@{() -> viewModel.onSaveClick()}"
                    android:text="@string/label_save" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>