<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.uhc.presentation.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginUsuario"
                style="@style/TextInputLayoutStyleDefault"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_padding_xxlarge"
                android:hint="@string/label_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    style="@style/EditTextStyleDefault"
                    android:layout_width="match_parent"
                    android:enabled="@{!viewModel.isProgress}"
                    android:text="@={viewModel.username}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginSenha"
                style="@style/TextInputLayoutStyleDefault"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/label_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginUsuario">

                <EditText
                    style="@style/EditTextStyleDefault"
                    android:layout_width="match_parent"
                    android:enabled="@{!viewModel.isProgress}"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:enabled="@{!viewModel.isProgress}"
                android:onClick="@{() -> viewModel.onLoginClick()}"
                android:text="@string/label_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginSenha" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isProgress}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>